--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -1,5 +1,20 @@
 body {
-  font-size: 14pt; }
+  font-size: 16pt; }
 
 small {
   font-size: 1em !important; }
+
+.customer-ramen {
+  background-color: #000;
+  background-image: url("../images/partofcustomer.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center; }
+  .customer-ramen section blockquote {
+    border: none;
+    box-shadow: none;
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 10px;
+    padding: 10px 10px;
+    font-size: 1.5em;
+    line-height: 1.1em; }
