--- a/sass/overwrite.scss
+++ b/sass/overwrite.scss
@@ -94,9 +94,11 @@ right: 0px;
 		}
 		&:nth-child(2){
 			font-size: 2em;
+			
 			p{
 				padding-right: 600px;
 				box-sizing: border-box;
+				font-weight: 300;
 			}
 		}
 		blockquote{
