--- a/sass/overwrite.scss
+++ b/sass/overwrite.scss
@@ -122,3 +122,33 @@ right: 0px;
 		}
 	}
 }
+.inner-universe{
+	background-image: url('../images/ramenbowl.jpg');
+	background-size: cover;
+	color: #fff;
+	.present{
+		box-shadow: 0px;
+		background: transparent;
+		border-radius: 1em;
+		blockquote{
+			color: #fff;
+			box-shadow: none;
+			background: transparent;
+			font-size: 1.5em;
+			line-height: 1.2em;
+			font-weight: 200;
+			text-shadow: 0px 0px 10px rgba(0,0,0,0.8);
+		}
+		h1{
+			color: #fff;
+			background-color: $highlight;
+			padding: 10px 0px;
+			border-radius: 1em;
+			
+		}
+		p{
+			font-size: 1.5em;
+			font-weight: 300;
+		}
+	}
+}
