--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff; }
   .inner-universe .present {
     box-shadow: 0px;
-    background: transparent;
+    background: rgba(0, 0, 0, 0.2);
     border-radius: 1em; }
     .inner-universe .present blockquote {
       color: #fff;
